--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.application.name=user-service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=12345
-spring.datasource.url=jdbc:mysql://mysqldb:3306/disaster
+spring.datasource.url=jdbc:mysql://localhost:3306/disaster
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
